* Copy and gzip dist web files during 'buildfs' step * Add load cell sensor support * Cleanups related to files and serving
